--- a/G48/front/templates/base/front_base.html
+++ b/G48/front/templates/base/front_base.html
@@ -7,9 +7,9 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_743039_6eebyf20ccn.css">
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
-    <link rel="stylesheet" href={%  static 'css/bootstrap.min.css' %}>
-    <link rel="stylesheet" href={%  static 'css/bootstrap-responsive.min.css' %}>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+{#    <link rel="stylesheet" href={%  static 'css/bootstrap.min.css' %}>#}
+{#    <link rel="stylesheet" href={%  static 'css/bootstrap-responsive.min.css' %}>#}
+{#    <script src="{% static 'js/bootstrap.min.js' %}"></script>#}
     {% block head %}{% endblock %}
 </head>
 <body>
