--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -8,12 +8,74 @@
 {% block head %}
     <link rel="stylesheet" href="{%  static 'css/home/index.min.css' %}">
     <script src="{%  static 'js/index.min.js' %}"></script>
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/css/bootstrap-select.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/bootstrap-select.min.js"></script>
+
+    <!-- (Optional) Latest compiled and minified JavaScript translation files -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
+
 {% endblock %}
 
 {% block main %}
     <div class="main">
         <div class="wrapper">
             <div class="search-form">
+                <form class="form-horizontal" action="/search_result/" method="post">
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">关键字：</label>
+                        <div class="col-sm-10">
+                            <input type="text"  name="content" class="form-control " id="inputEmail3" placeholder="请输入关键字" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="select-type" class="col-sm-2 control-label">查询方式：</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" id="select-type" name="inquiry_mode">
+                                <option value="1">模糊检索</option>
+                                <option value="2">精确检索</option>
+                                <option value="3">高级检索</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="table-type1" class="col-sm-2 control-label">表类型：</label>
+                        <div class="col-sm-10">
+                            <select class="form-control selectpicker" id="table-type1" name="tableType" multiple>
+                                <option value="1">.xls</option>
+                                <option value="2">.xlsx</option>
+                                <option value="3">.cvs</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="select-scope" class="col-sm-2 control-label">搜索范围：</label>
+                        <div class="col-sm-10">
+                            <select class="form-control" id="select-scope" name="searchRange">
+                                <option value="1">***</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group ">
+                        <div class="col-sm-2 pull-right">
+                            <input type="submit" class="form-control" value="开始搜索">
+                        </div>
+                        <div class="col-sm-2 pull-right">
+                            <input type="button" class="form-control" value="重置">
+                        </div>
+                        <div class="col-sm-2 pull-right">
+                            <a href="/config/">
+                                <input type="button" class="form-control" value="热更新">
+                            </a>
+                        </div>
+                    </div>
+                </form>
                 <form action="/search_result/" method="post" class="form">
                     <div class="form1">
                         <label for="search">关 键 字：</label>
@@ -53,6 +115,13 @@
                         </div>
                     </div>
                 </form>
+            </div>
+        </div>
+        <div id="progress-group" class="form-group" >
+            <div class="progress">
+                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                    <span class="sr-only">40% Complete (success)</span>
+                </div>
             </div>
         </div>
         <div class="show_excel" id="show_excel">
@@ -99,11 +168,6 @@
                     </tbody>
                 </table>
             {% endfor %}
-        </div>
-        <div>
-            <p id="test">
-                dkkdk
-            </p>
         </div>
     </div>
 {% endblock %}
