--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -120,7 +120,7 @@
         <div id="progress-group" class="form-group" >
             <div class="progress">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                    <span class="sr-only">40% Complete (success)</span>
+                    40% Complete (success)
                 </div>
             </div>
         </div>
@@ -150,17 +150,25 @@
                     {% for row_data in data.row_datas %}
                         <tr>
                             {% for item in row_data %}
-                                {% with var=forloop.parentloop.counter0  %}
-                                    {% if forloop.counter0 in data.col|get_child_list:var %}
-                                        <td>
-                                            {% autoescape off %}
-                                                {{item }}
-                                            {% endautoescape %}
-                                        </td>
-                                    {% else %}
-                                        <td>{{ item }} </td>
-                                    {% endif %}
-                                {% endwith %}
+                                <td>
+                                    {% autoescape off %}
+                                        {{item }}
+                                    {% endautoescape %}
+                                </td>
+
+{#                                {% with var=forloop.parentloop.counter0  %}#}
+{#                                    {% if forloop.counter0 in data.col|get_child_list:var %}#}
+{#                                        <td>#}
+{#                                            {% autoescape off %}#}
+{#                                                {{item }}#}
+{#                                            {% endautoescape %}#}
+{#                                        </td>#}
+{#                                    {% else %}#}
+{#                                        {% autoescape off %}#}
+{#                                            {{item }}#}
+{#                                        {% endautoescape %}#}
+{#                                    {% endif %}#}
+{#                                {% endwith %}#}
                             {% endfor %}
                         </tr>
                     {% endfor %}
