。csv文件的解析与整理

--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -130,7 +130,7 @@
                     <span><strong>来源表:</strong> {{ data.table_name }} ,  </span>
                     <span> <strong>来源SHEET: </strong>{{ data.sheet_name }}</span>
                 </div>
-                <table class="table table-striped table-bordered table-hover" >
+                <table class="table table-striped table-bordered table-hover" style="overflow:scroll;">
                     <thead>
                     <tr>
                         {% for item in data.head %}
