--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -35,6 +35,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <label for="search-path" class="col-sm-2 control-label">搜索路径：</label>
+                        <div class="col-sm-10">
+                            <input type="file"  name="content" class="form-control " id="search-path" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label for="select-type" class="col-sm-2 control-label">查询方式：</label>
                         <div class="col-sm-10">
                             <select class="form-control" id="select-type" name="inquiry_mode">
@@ -155,20 +161,6 @@
                                         {{item }}
                                     {% endautoescape %}
                                 </td>
-
-{#                                {% with var=forloop.parentloop.counter0  %}#}
-{#                                    {% if forloop.counter0 in data.col|get_child_list:var %}#}
-{#                                        <td>#}
-{#                                            {% autoescape off %}#}
-{#                                                {{item }}#}
-{#                                            {% endautoescape %}#}
-{#                                        </td>#}
-{#                                    {% else %}#}
-{#                                        {% autoescape off %}#}
-{#                                            {{item }}#}
-{#                                        {% endautoescape %}#}
-{#                                    {% endif %}#}
-{#                                {% endwith %}#}
                             {% endfor %}
                         </tr>
                     {% endfor %}
