--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -37,7 +37,7 @@
                     <div class="form-group">
                         <label for="search-path" class="col-sm-2 control-label">搜索路径：</label>
                         <div class="col-sm-10">
-                            <input type="file"  name="content" class="form-control " id="search-path" required>
+                            <input type="file"  name="filename" class="form-control " id="search-path" >
                         </div>
                     </div>
                     <div class="form-group">
@@ -82,55 +82,17 @@
                         </div>
                     </div>
                 </form>
-                <form action="/search_result/" method="post" class="form">
-                    <div class="form1">
-                        <label for="search">关 键 字：</label>
-                        <input type="text" name="content" class="search" id="search" placeholder="请输入关键字" class="form-control" required> <br>
-                        <label for="search_type">查询方式：</label>
-                        <select name="inquiry_mode" class="search-type" id="search_type">
-                            <option value="1">模糊检索</option>
-                            <option value="2">精确检索</option>
-                            <option value="3">高级检索</option>
-                        </select><br>
-                        <label for="table-type">表 类 型：</label>
-                        <select name="tableType" class="table-type" id="table-type">
-                            <option value="模糊查询">全类型</option>
-                            <option value="saab">Saab</option>
-                            <option value="fiat">Fiat</option>
-                            <option value="audi">Audi</option>
-                        </select><br>
-                        <label for="search-range">搜索范围：</label>
-                        <select name="searchRange" class="search-range" id="search-range">
-                            <option value="模糊查询">全表</option>
-                            <option value="saab">Saab</option>
-                            <option value="fiat">Fiat</option>
-                            <option value="audi">Audi</option>
-                        </select><br>
-                        <div class="submit">
-                            <div class="button1">
-                                <input type="submit" value="开始搜索" class="button" class="button1">
-                            </div>
-                            <div class="button2">
-                                <a href="/config/">
-                                    <input type="button" value="重置" class="button" class="button2">
-                                </a>
-                            </div>
-                            <div class="button3">
-                                <input type="submit" value="热更新" class="button" class="button3">
-                            </div>
-                        </div>
-                    </div>
-                </form>
             </div>
         </div>
-        <div id="progress-group" class="form-group" >
+
+        <div class="show_excel" id="show_excel">
+            <div id="progress-group" class="form-group" >
             <div class="progress">
                 <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
                     40% Complete (success)
                 </div>
             </div>
-        </div>
-        <div class="show_excel" id="show_excel">
+            </div>
             {% for data in datas %}
                 <div class="table_info">
                     <span><strong>来源表:</strong> {{ data.table_name }} ,  </span>
