--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -7,9 +7,10 @@
 
 {% block head %}
     <link rel="stylesheet" href="{%  static 'css/home/index.min.css' %}">
-    <script src="{%  static 'js/index.min.js' %}"></script>
+{#    <script src="{%  static 'js/index.min.js' %}"></script>#}
+    <script src="{%  static 'js/index.js' %}"></script>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
+{#    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>#}
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Latest compiled and minified CSS -->
@@ -34,6 +35,13 @@
                             <input type="text"  name="content" class="form-control " id="inputEmail3" placeholder="请输入关键字" required>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="btnConnect" class="col-sm-2 control-label">连接：</label>
+                        <div class="col-sm-10">
+                            <input id="btnConnect" type="button" value="连接" onclick="connect()" />
+                        </div>
+                    </div>
+
                     <div class="form-group">
                         <label for="search-path" class="col-sm-2 control-label">搜索路径：</label>
                         <div class="col-sm-10">
@@ -70,7 +78,7 @@
                     </div>
                     <div class="form-group ">
                         <div class="col-sm-2 pull-right">
-                            <input type="submit" class="form-control" value="开始搜索">
+                            <input id="btn-search" type="button" class="form-control" value="开始搜索" onclick="connect1()">
                         </div>
                         <div class="col-sm-2 pull-right">
                             <input type="button" class="form-control" value="重置">
@@ -86,10 +94,10 @@
         </div>
 
         <div class="show_excel" id="show_excel">
-            <div id="progress-group" class="form-group" >
+            <div id="progress-group" class="form-group" style="display: none;">
             <div class="progress">
-                <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-                    40% Complete (success)
+                <div id="progressbar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 0%;" >
+                    0%
                 </div>
             </div>
             </div>
@@ -132,4 +140,146 @@
             {% endfor %}
         </div>
     </div>
+    <script>
+        var socket;
+        function connect() {
+            var host = "ws://127.0.0.1:9004"
+            socket = new WebSocket(host);
+            try {
+
+                socket.onopen = function (msg) {
+                    {#$("btnConnect").disabled = true;#}
+                    alert("连接成功！");
+                    socket.send('返回结果');
+                };
+
+                socket.onmessage = function (msg) {
+                    if (typeof msg.data == "string") {
+                        {#displayContent(msg.data);#}
+                        console.log(msg.data)
+                    }
+                    else {
+                        alert("非文本消息");
+                    }
+                };
+
+                socket.onclose = function (msg) { alert("socket closed!") };
+            }
+            catch (ex) {
+                log(ex);
+            }
+        }
+
+        function send() {
+            var msg = $("sendText").value
+            socket.send(msg);
+        }
+
+        window.onbeforeunload = function () {
+            try {
+                socket.close();
+                socket = null;
+            }
+            catch (ex) {
+            }
+        };
+
+        function $(id) { return document.getElementById(id); }
+
+        Date.prototype.Format = function (fmt) { //author: meizz
+            var o = {
+                "M+": this.getMonth() + 1, //月份
+                "d+": this.getDate(), //日
+                "h+": this.getHours(), //小时
+                "m+": this.getMinutes(), //分
+                "s+": this.getSeconds(), //秒
+                "q+": Math.floor((this.getMonth() + 3) / 3), //季度
+                "S": this.getMilliseconds() //毫秒
+            };
+            if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+            for (var k in o)
+                if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+            return fmt;
+        }
+
+        function displayContent(msg) {
+            $("txtContent").value += "\r\n" +new Date().Format("yyyy/MM/dd hh:mm:ss")+ ":  " + msg;
+        }
+        function onkey(event) { if (event.keyCode == 13) { send(); } }
+    </script>
+    <script>
+        var socket;
+        function connect1() {
+            var host = "ws://127.0.0.1:9005/"
+            socket = new WebSocket(host);
+            jQuery("#progress-group").show();
+            var progress = jQuery("#progressbar")
+            progress.css({"width": 0});
+            progress.text('0% Complete (success)');
+            try {
+                socket.onopen = function (msg) {
+                    $("btnConnect").disabled = true;
+                    alert("连接成功——G48！");
+                    socket.send("你的连接成功");
+                };
+
+                socket.onmessage = function (msg) {
+                    if (typeof msg.data == "string") {
+                        var progress = jQuery("#progressbar")
+                        console.log(msg.data)
+                        {#displayContent(msg.data);#}
+                        {#document.getElementById("progressbar").innerText = msg.data;#}
+                        {#document.getElementById("progressbar").style.width = msg.data;#}
+                        progress.text(msg.data + ' Complete (success)');
+                        progress.css({"width":msg.data});
+                    }
+                    else {
+                        alert("非文本消息");
+                    }
+                };
+
+                socket.onclose = function (msg) { alert("socket closed!") };
+            }
+            catch (ex) {
+                log(ex);
+            }
+        }
+
+        function send() {
+            var msg = $("sendText").value
+            socket.send(msg);
+        }
+
+        window.onbeforeunload = function () {
+            try {
+                socket.close();
+                socket = null;
+            }
+            catch (ex) {
+            }
+        };
+
+        function $(id) { return document.getElementById(id); }
+
+        Date.prototype.Format = function (fmt) { //author: meizz
+            var o = {
+                "M+": this.getMonth() + 1, //月份
+                "d+": this.getDate(), //日
+                "h+": this.getHours(), //小时
+                "m+": this.getMinutes(), //分
+                "s+": this.getSeconds(), //秒
+                "q+": Math.floor((this.getMonth() + 3) / 3), //季度
+                "S": this.getMilliseconds() //毫秒
+            };
+            if (/(y+)/.test(fmt)) fmt = fmt.replace(RegExp.$1, (this.getFullYear() + "").substr(4 - RegExp.$1.length));
+            for (var k in o)
+                if (new RegExp("(" + k + ")").test(fmt)) fmt = fmt.replace(RegExp.$1, (RegExp.$1.length == 1) ? (o[k]) : (("00" + o[k]).substr(("" + o[k]).length)));
+            return fmt;
+        }
+
+        function displayContent(msg) {
+            $("txtContent").value += "\r\n" +new Date().Format("yyyy/MM/dd hh:mm:ss")+ ":  " + msg;
+        }
+        function onkey(event) { if (event.keyCode == 13) { send(); } }
+    </script>
 {% endblock %}
