--- a/G48/front/templates/home/index.html
+++ b/G48/front/templates/home/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{%  static 'css/home/index.min.css' %}">
 {#    <script src="{%  static 'js/index.min.js' %}"></script>#}
     <script src="{%  static 'js/index.js' %}"></script>
+    <script src="{% static 'arttemplate/template-web.js' %}"></script>
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 {#    <script src="https://cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>#}
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -21,6 +22,47 @@
 
     <!-- (Optional) Latest compiled and minified JavaScript translation files -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.4/js/i18n/defaults-*.min.js"></script>
+
+    {% verbatim %}
+    <script id="query-item" type="text/html">
+    {{ each datas data index }}
+        <div class="table_info">
+            <span><strong>来源表:</strong> {{ data.table_name }} ,  </span>
+            <span> <strong>来源SHEET: </strong>{{ data.sheet_name }}</span>
+        </div>
+        <table class="table table-striped table-bordered table-hover" style="overflow:scroll;">
+            <thead>
+            <tr>
+                {{ each data.head item index }}
+                    <th >
+                        {{item }}
+                    </th>
+                {{ /each }}
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                {{ each data.colarray colnum index }}
+                    <td>
+                        {{ colnum }}
+                    </td>
+                {{ /each }}
+            </tr>
+                {{ each data.row_datas row_data index }}
+                    <tr>
+                        {{ each row_data item index1 }}
+                            <td>
+                                {{#item }}
+                        </td>
+                        {{ /each }}
+                    </tr>
+                {{ /each }}
+            </tbody>
+        </table>
+    {{ /each }}
+    </script>
+    {% endverbatim %}
+
 
 {% endblock %}
 
@@ -100,7 +142,7 @@
                     0%
                 </div>
             </div>
-            </div>
+            </div >
             {% for data in datas %}
                 <div class="table_info">
                     <span><strong>来源表:</strong> {{ data.table_name }} ,  </span>
@@ -219,19 +261,28 @@
             try {
                 socket.onopen = function (msg) {
                     $("btnConnect").disabled = true;
-                    alert("连接成功——G48！");
+                    {#alert("连接成功——G48！");#}
                     socket.send("你的连接成功");
                 };
 
                 socket.onmessage = function (msg) {
                     if (typeof msg.data == "string") {
-                        var progress = jQuery("#progressbar")
                         console.log(msg.data)
                         {#displayContent(msg.data);#}
-                        {#document.getElementById("progressbar").innerText = msg.data;#}
-                        {#document.getElementById("progressbar").style.width = msg.data;#}
-                        progress.text(msg.data + ' Complete (success)');
-                        progress.css({"width":msg.data});
+
+                        {#进度条的代码#}
+                        var progress = jQuery("#progressbar")
+                        {#progress.text(msg.data + ' Complete (success)');#}
+                        {#progress.css({"width":msg.data});#}
+
+                        {#显示查询结果代码#}
+                        var json_obj = JSON.parse(msg.data);
+                        {#有数据#}
+                        var datas = json_obj["datas"]
+                        var html = template('query-item',{"datas": datas});
+                        var show_excel = jQuery("#show_excel");
+                        show_excel.append(html)
+                        console.log(json_obj);
                     }
                     else {
                         alert("非文本消息");
