将script代码改写成js代码， 添加热更新代码

--- a/G48/front/templates/common/auth.html
+++ b/G48/front/templates/common/auth.html
@@ -9,7 +9,7 @@
     <script src="../../dist/js/auth.min.js"></script>
 </head>
 <body>
-    <!--  <button id="btn">登录/注册</button>  -->
+    <button id="btn">登录/注册</button>
     <div class="mask-wrapper">
         <div class="auth-wrapper">
             <div class="close-wrapper">
